Finish all requirements

--- a/CharacterBuilder/src/app/randomizer-page/randomizer-page.component.html
+++ b/CharacterBuilder/src/app/randomizer-page/randomizer-page.component.html
@@ -1,1 +1,13 @@
-<p>randomizer-page works!</p>
+<div>
+  <article>
+    <div class="grid">
+      <button (click)="onZoomIn()">+</button>
+      <button (click)="onZoomOut()">-</button>
+      <button (click)="onNext()">Next</button>
+    </div>
+  </article>
+
+  <article class="randomizer-image-container">
+    <img class="randomizer-image" src="{{ currentImageLink() }}" alt="" />
+  </article>
+</div>
